# sliver-mcp

./: .gitignore  README.md  pyproject.toml
src/sliver_mcp/: __main__.py  armory.py  client.py  serializers.py  server.py
