[project]
name = "sliver-mcp"
version = "0.2.3"
description = "MCP server for Sliver C2 — exec, armory, listeners, implants (complements upstream fs-only MCP)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "sliver-py>=0.0.19",
]

[project.scripts]
sliver-mcp = "sliver_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sliver_mcp"]
